Fixed header h1 on small screens

--- a/less/cover.less
+++ b/less/cover.less
@@ -95,8 +95,8 @@
 }
 @media screen and (max-width: 595px) {
 	.cover header h1 {
-		font-size: 3.1em;
-		line-height: 22px;
+		font-size: 2.5em;
+		line-height: 50px;
 	}
 }
 .cover header h1 a:hover {
